Use astro preview to include sitemap in link check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm ci
       - name: serve docs
         run: |
-          nohup npm run dev > /tmp/astro.log 2>&1 &
+          nohup npm run preview > /tmp/astro.log 2>&1 &
           echo $! > /tmp/astro.pid
           sleep 5
       - name: check for broken links
