--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,12 @@ jobs:
           kill $(cat /tmp/astro.pid) || true
           echo "::: Astro Logs :::"
           cat /tmp/astro.log || true
+
+  spell-check:
+    name: Spell Check with Typos
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Actions Repository
+      uses: actions/checkout@v4
+    - name: Spell Check Repo
+      uses: crate-ci/typos@v1.35.5
